Bug fix: In Clippings Sidebar, synced clipping/folder doesn't load when selected if background script suspended (issue #530)
- Occurs if the sidebar is open by default at browser startup

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -685,6 +685,25 @@ body[data-os="mac"] #reload-sync-fldr-msgbox {
     margin-top: 0;
 }
 
+#sync-progress {
+    top: 64px;
+    --width: 150px;
+    --height: auto;
+}
+
+#sync-progress img {
+    width: 32px;
+    height: 32px;
+}
+
+#sync-progress progress {
+    width: 100%;
+}
+
+#sync-progress #sync-progress-ico {
+    text-align: center;
+}
+
 #init-error-msgbox {
     top: 88px;
     --width: 200px;
